remove the use of opencsv
This library is quite old and is
bringing in older dependencies. Best to
replace it with a newer equivalent that
does not have these problems.